welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: not found: value ado
 	ado = ado + 1
        ^countTeen:7: error: not found: value ado
 	ado = ado + 1
        ^countTeen:10: error: not found: value ado
 	ado = ado + 1
        ^countTeen:13: error: not found: value ado
 	ado = ado + 1
        ^countTeen:15: error: not found: value ado
 return ado;
        ^